@@ -1,3 +1,7 @@
+mkdocs-material-2.7.3 (2018-04-26)
+
+  * Added Finnish translations
+
 mkdocs-material-2.7.2 (2018-04-09)
 
   * Fixed rendering issue for details on Edge
